# rust-img

./: Cargo.toml  Makefile  README.md  config.test.json  ffi.py  go.mod  go.sum  img.ppm  kernel.go
http/controller/ppm/: ppm.go
http/request/: validation.go
http/request/ppmrequest/: ppm.go
http/route/: route.go
lib/: .gitignore  Cargo.toml  build.rs  build.sh  libembed.h  mandelbrot.c
lib/lib/: build.sh
lib/src/: lib.rs  ppm.rs  test.rs
resources/lang/en-US/: rules.json
resources/template/: index.html
src/: build.rs  lib.rs  ppm.rs  ppma_io.rs
