[package]
name = "rust-img"
version = "0.1.0"
authors = ["LAURENT Louis <louis_laurent@aol.fr>", "Jérémy LAMBERT <jeremy.la@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"
rand = "0.7.2"
rayon = "1.3.0"
bench = "1.0.0"

[lib]
name = "embed"
crate-type = ["dylib"]
